src/objects/dh_superclone__CloneObject__c.object
<CustomObject>
    <fields>
        <fullName>dh_superclone__CloneConfiguration__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Clone Configuration</label>
        <referenceTo>dh_superclone__CloneConfiguration__c</referenceTo>
        <relationshipLabel>Objects</relationshipLabel>
        <relationshipName>CloneObjects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dh_superclone__ExtID__c</fullName>
        <description>External ID used to help export configurations from an Org and insert them into a different Org.</description>
        <externalId>true</externalId>
        <label>ExtID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dh_superclone__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dh_superclone__ObjectParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Parent</label>
        <referenceTo>dh_superclone__CloneObject__c</referenceTo>
        <relationshipLabel>Object Children</relationshipLabel>
        <relationshipName>ObjectChild</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dh_superclone__RelationshipName__c</fullName>
        <label>Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Clone Object</label>
    <listViews>
        <fullName>dh_superclone__All</fullName>
        <columns>dh_superclone__CloneConfiguration__c</columns>
        <columns>dh_superclone__ObjectParent__c</columns>
        <columns>dh_superclone__ObjectName__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object Relationship</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clone Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>